Fix/job lists qa (#334)
* fix(filters): active state on filter buttons and visual bugs

* fix(navigation): flyout navigation height fix on mobile

* fix(navigation): calculate view height

* fix(navigation): remove navigation height

* fix(filters): adapt styling for dark mode and refactor height calc

* fix(filters): filter button clear all color

* fix(jobs): text teaser component overflowing

--- a/src/styles/core/_base.scss
+++ b/src/styles/core/_base.scss
@@ -1,6 +1,21 @@
 @import "variables";
 @import "mixins";
 
+:root {
+	@include bp-xs {
+		--mobile-height: 100%;
+	}
+}
+
+body,
+html {
+	width: 100vw;
+	height: 100vh;
+	@include bp-xs {
+		height: var(--mobile-height);
+	}
+}
+
 html {
 	font-size: 62.5%;
 	scroll-behavior: smooth;
@@ -8,7 +23,6 @@ html {
 
 body {
 	@include default-animation(background-color);
-
 	font-size: $font-size--copy-1;
 	color: $color-primary--black;
 	margin: 0;
@@ -23,7 +37,8 @@ body {
 
 	/* stylelint-disable-next-line selector-no-qualifying-type */
 	&.is-no-scroll {
-		overflow-y: hidden;
+		overflow: hidden;
+		height: var(--mobile-height);
 	}
 }
 
@@ -208,4 +223,9 @@ ul {
 	position: absolute;
 	white-space: nowrap;
 	width: 1px;
+}
+
+.button--clear {
+	background-color: $color-primary--gray;
+	color: $color-primary--white;
 }
